--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ZombieAttackGame",
+  "name": "zombie_attack_game",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
